# AURUN-ERP

./: .gitattributes  .gitignore  .pre-commit-config.yaml  GUIA.md  IMPLEMENTACION_AURUM_ERP.md  README.md  erp_mineria_preciosos.html
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260626_0001_initial_tenants_and_branding.py  20260626_0002_users_roles_permissions_auth.py  20260626_0003_parties_customers_suppliers.py  20260626_0004_inventory_purchasing_sales.py  20260626_0005_transformation_quality.py  20260627_0006_accounting_ledger.py  20260627_0007_config_parameters_modules.py  20260627_0008_audit_logs.py  20260627_0009_api_keys.py  20260629_0010_soft_delete_master.py  20260629_0011_soft_delete_operacion.py  20260630_0012_units_of_measure.py  20260630_0013_currencies_and_company.py
backend/scripts/: resync_roles.py
backend/src/aurum/: __init__.py  api.py  main.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: conftest.py  test_api_publica_flow.py  test_auditoria_flow.py  test_auth_flow.py  test_configuracion_flow.py  test_contabilidad_flow.py  test_crud_maestros_flow.py  test_crud_operacion_flow.py  test_dashboard_flow.py  test_endurecimiento_flow.py  test_monedas_empresa_flow.py  test_operacion_flow.py  test_platform_token_flow.py  test_rbac_reconcile_flow.py  test_reportes_flow.py  test_rls_tenant_isolation.py  test_terceros_flow.py  test_transformacion_calidad_flow.py  test_unidades_flow.py
backend/tests/unit/: test_authorization.py  test_pipeline.py  (+5 more)
(+237 files in other folders)
